--- a/templates/coordinador/dashboard.html
+++ b/templates/coordinador/dashboard.html
@@ -516,7 +516,13 @@
             <div class="section-title mb-4">
                 <i class="fas fa-user-tie"></i> Secciones Coordinadas
             </div>
-            
+            {% if session.get('es_coordinador') %}
+              <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('mis_estudiantes.mis_estudiantes') }}">
+                  <i class="bi bi-people"></i><span>Mis Estudiantes y Boletas</span>
+                </a>
+              </li>
+              {% endif %}
             {% if secciones_info %}
             <div class="row">
                 {% for item in secciones_info %}
